--- a/package.json
+++ b/package.json
@@ -25,10 +25,24 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
     "@semantic-release/github",
     "@semantic-release/npm",
-    "@semantic-release/git"
+    [
+      "@semantic-release/git",
+      {
+        "assets": [
+          "package.json",
+          "CHANGELOG.md"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci] \\n\\n${nextRelease.notes}"
+      }
+    ]
   ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -41,7 +55,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2"
   },
