--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2"
   },
@@ -70,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@storybook/addon-actions": "^6.2.9",
@@ -81,6 +83,7 @@
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
